--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ a {
 #container {
   position: absolute;
   height: 100%;
+  width: 100%;
   justify-content: center;
   display: flex;
   flex-direction: column;
